--- a/repository.yaml
+++ b/repository.yaml
@@ -1,3 +1,3 @@
 name: Modbus MQTT Bridge
-url: 'https://github.com/MerzSebastian/hassio-ModbusPowerMeter'
-maintainer: Sebastian Merz <awesome@example.com>
+url: 'https://github.com/MerzSebastian/hassio-ModbusMQTTBridge'
+maintainer: Sebastian Merz
