added functioncode to device config, added sdm630-modbus v2 to devices

--- a/modbus_mqtt_bridge_new/devices/orno_or-we-517.yaml
+++ b/modbus_mqtt_bridge_new/devices/orno_or-we-517.yaml
@@ -11,6 +11,7 @@ serial:
   mode: rtu
   debug: False
   clear_buffers_before_each_transaction: True
+  functioncode: 3
 sensors:
   - name: voltage l1
     icon: mdi:lightning-bolt
