--- a/modbus_mqtt_bridge/Dockerfile
+++ b/modbus_mqtt_bridge/Dockerfile
@@ -1,5 +1,6 @@
 ARG BUILD_FROM
 FROM $BUILD_FROM
+#FROM alpine:3.14
 
 # Install requirements for add-on
 RUN apk add --no-cache python3
@@ -8,12 +9,14 @@ RUN apk add --no-cache py3-pip
 # Copy data for add-on
 COPY adapter.py /
 COPY requirements.txt /
-COPY entrypoint.sh /
 RUN chmod a+x /adapter.py
 RUN chmod a+x /requirements.txt
-RUN chmod a+x /entrypoint.sh
 
 # Install requirements
 RUN pip3 install -r requirements.txt
 
-CMD [ "/entrypoint.sh" ]
+# Copy ui folder
+COPY ui /ui
+COPY devices /devices
+
+CMD ["/usr/bin/with-contenv", "exec", "python3", "adapter.py"]
