--- a/modbus_mqtt_bridge/config.yaml
+++ b/modbus_mqtt_bridge/config.yaml
@@ -1,10 +1,11 @@
 name: Modbus MQTT Bridge
 description: Home Assistant Addon to bridge modbus devices to MQTT
-version: 1.1.2
+version: 1.2.6
 slug: modbus_mqtt_bridge
 init: false
+ingress: true
 uart: true
-hassio_api: true
+panel_icon: mdi:network
 arch:
   - aarch64
   - amd64
@@ -13,27 +14,5 @@ arch:
   - i386
 services:
   - mqtt:need
-options:
-  publish_rate: 2
-  logging: false
-  serial_baudrate: 9600
-  serial_bytesize: 8
-  serial_parity: E
-  serial_stopbits: 1
-  serial_timeout: 0.6
-  serial_mode: rtu
-  serial_clear_buffers_before_each_transaction: false
-  serial_debug: false
-schema:
-  serial_port: device(subsystem=tty)
-  publish_rate: int
-  alternative_topics: str?
-  logging: bool
-  serial_baudrate: int
-  serial_bytesize: int
-  serial_parity: str
-  serial_stopbits: int
-  serial_timeout: float
-  serial_mode: str
-  serial_clear_buffers_before_each_transaction: bool
-  serial_debug: bool
+map:
+  - config:ro
